--- a/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
+++ b/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Picture" textLabel="qph-wg-Dil" style="IBUITableViewCellStyleDefault" id="Dod-hO-inL" customClass="StormTableViewCell" customModule="Storm_Viewer__1" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StormCell" textLabel="qph-wg-Dil" style="IBUITableViewCellStyleDefault" id="Dod-hO-inL" customClass="StormTableViewCell" customModule="Storm_Viewer__1" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dod-hO-inL" id="6bF-Eo-Noc">
