--- a/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
+++ b/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StormCell" textLabel="qph-wg-Dil" style="IBUITableViewCellStyleDefault" id="Dod-hO-inL" customClass="StormTableViewCell" customModule="Storm_Viewer__1" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StormCell" textLabel="qph-wg-Dil" style="IBUITableViewCellStyleDefault" id="Dod-hO-inL">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dod-hO-inL" id="6bF-Eo-Noc">
@@ -56,10 +57,43 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="J14-FW-2Sm"/>
+                    <connections>
+                        <segue destination="D91-Ty-OAv" kind="show" id="yXY-XF-y2i"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tqa-Jd-mpP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="547" y="8"/>
+        </scene>
+        <!--Storm Detail View Controller-->
+        <scene sceneID="rpJ-Hg-fWL">
+            <objects>
+                <viewController storyboardIdentifier="StormDetailViewController" id="D91-Ty-OAv" customClass="StormDetailViewController" customModule="Storm_Viewer__1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="E2A-cP-NZ6">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkd-A9-fx9">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hcg-Fc-aF9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hcg-Fc-aF9" firstAttribute="trailing" secondItem="Lkd-A9-fx9" secondAttribute="trailing" id="6OQ-lg-ep3"/>
+                            <constraint firstItem="Lkd-A9-fx9" firstAttribute="leading" secondItem="hcg-Fc-aF9" secondAttribute="leading" id="99C-Ei-2rP"/>
+                            <constraint firstItem="hcg-Fc-aF9" firstAttribute="bottom" secondItem="Lkd-A9-fx9" secondAttribute="bottom" id="p8L-D1-6NN"/>
+                            <constraint firstItem="Lkd-A9-fx9" firstAttribute="top" secondItem="hcg-Fc-aF9" secondAttribute="top" id="seN-OC-eNE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="6Rz-E9-SLx"/>
+                    <connections>
+                        <outlet property="imageView" destination="Lkd-A9-fx9" id="9SX-8b-UEE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kLA-SE-S04" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1448" y="8"/>
         </scene>
     </scenes>
     <resources>
