--- a/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
+++ b/Storm Viewer #1/Storm Viewer #1/Base.lproj/Main.storyboard
@@ -57,9 +57,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="J14-FW-2Sm"/>
-                    <connections>
-                        <segue destination="D91-Ty-OAv" kind="show" id="yXY-XF-y2i"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tqa-Jd-mpP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -74,7 +71,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkd-A9-fx9">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hcg-Fc-aF9"/>
@@ -88,12 +85,12 @@
                     </view>
                     <navigationItem key="navigationItem" id="6Rz-E9-SLx"/>
                     <connections>
-                        <outlet property="imageView" destination="Lkd-A9-fx9" id="9SX-8b-UEE"/>
+                        <outlet property="imageView" destination="Lkd-A9-fx9" id="0ln-kc-Tyj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLA-SE-S04" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1448" y="8"/>
+            <point key="canvasLocation" x="1469" y="8"/>
         </scene>
     </scenes>
     <resources>
