--- a/Guess The Flag/Guess The Flag/Base.lproj/Main.storyboard
+++ b/Guess The Flag/Guess The Flag/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                     <constraint firstAttribute="height" constant="100" id="WnV-y0-J4j"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="us"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2LO-BL-JGU">
                                 <rect key="frame" x="96.666666666666686" y="360" width="200" height="100"/>
@@ -48,7 +48,7 @@
                                     <constraint firstAttribute="height" constant="100" id="kEe-Cl-f9e"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="monaco"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYz-G0-Qz2">
                                 <rect key="frame" x="96.666666666666686" y="230" width="200" height="100"/>
@@ -57,7 +57,7 @@
                                     <constraint firstAttribute="width" constant="200" id="Zlo-q6-EjW"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="france"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -79,6 +79,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="france" width="200" height="100"/>
+        <image name="monaco" width="200" height="100"/>
+        <image name="us" width="200" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
