--- a/Guess The Flag/Guess The Flag/Base.lproj/Main.storyboard
+++ b/Guess The Flag/Guess The Flag/Base.lproj/Main.storyboard
@@ -68,31 +68,27 @@
                                     <action selector="flagWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MZ9-3b-xzi"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5v-A7-ZCB">
-                                <rect key="frame" x="172" y="777" width="49" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="2LO-BL-JGU" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Idv-4D-Ga0"/>
-                            <constraint firstItem="d5v-A7-ZCB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IwX-l2-Kaz"/>
                             <constraint firstItem="W1Q-VL-ywk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Mb5-UZ-AD6"/>
                             <constraint firstItem="WYz-G0-Qz2" firstAttribute="top" secondItem="W1Q-VL-ywk" secondAttribute="bottom" constant="30" id="UX9-xA-mAZ"/>
                             <constraint firstItem="2LO-BL-JGU" firstAttribute="top" secondItem="WYz-G0-Qz2" secondAttribute="bottom" constant="30" id="d6b-Z1-agJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="W1Q-VL-ywk" secondAttribute="top" constant="-40" id="nQu-1y-Mpv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="d5v-A7-ZCB" secondAttribute="bottom" constant="20" id="pyb-NV-6Bg"/>
                             <constraint firstItem="WYz-G0-Qz2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="xXn-VR-qda"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="rrz-Mb-pZC"/>
+                    <navigationItem key="navigationItem" id="rrz-Mb-pZC">
+                        <barButtonItem key="rightBarButtonItem" id="Knt-J3-BIe">
+                            <color key="tintColor" systemColor="tintColor"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="bottomButton" destination="2LO-BL-JGU" id="KzV-Gf-ibR"/>
                         <outlet property="midButton" destination="WYz-G0-Qz2" id="oJO-ho-Tgi"/>
-                        <outlet property="scoreLabel" destination="d5v-A7-ZCB" id="WRu-8m-heQ"/>
+                        <outlet property="scoreBarButton" destination="Knt-J3-BIe" id="fUx-im-UiD"/>
                         <outlet property="topButton" destination="W1Q-VL-ywk" id="hFM-5k-ggA"/>
                     </connections>
                 </viewController>
@@ -107,6 +103,9 @@
         <image name="us" width="200" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
