--- a/Milestone challenge 1-3/Milestone challenge 1-3/Base.lproj/Main.storyboard
+++ b/Milestone challenge 1-3/Milestone challenge 1-3/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +43,22 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C1e-5I-uiQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="261.83206106870227" y="13.380281690140846"/>
+            <point key="canvasLocation" x="346" y="13"/>
+        </scene>
+        <!--Flag Detail View Controller-->
+        <scene sceneID="4sd-w6-HaE">
+            <objects>
+                <viewController storyboardIdentifier="FlagDetailViewController" id="y80-iz-2hW" customClass="FlagDetailViewController" customModule="Milestone_challenge_1_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q5X-W2-eFj">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="8Yf-L8-pL8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lEc-2V-QSq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1111" y="13"/>
         </scene>
     </scenes>
     <resources>
