--- a/Milestone challenge 1-3/Milestone challenge 1-3/Base.lproj/Main.storyboard
+++ b/Milestone challenge 1-3/Milestone challenge 1-3/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fUI-KS-754">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e3b-FQ-FW1">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -8,6 +8,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="VD0-2C-46s">
+            <objects>
+                <navigationController id="e3b-FQ-FW1" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cOo-ld-Rlb">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fUI-KS-754" kind="relationship" relationship="rootViewController" id="krH-uv-srX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FOb-1o-vYq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-521" y="13"/>
+        </scene>
         <!--Flag List Table View Controller-->
         <scene sceneID="LbN-yF-tZI">
             <objects>
@@ -40,6 +56,7 @@
                             <outlet property="delegate" destination="fUI-KS-754" id="Uvg-Zm-SAE"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="Ts2-Jd-0y8"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C1e-5I-uiQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
